Fix postbox color flickers, slow transitions & line-height

--- a/css/structure/postbox.css
+++ b/css/structure/postbox.css
@@ -7,23 +7,16 @@
     color: #3e4349;
     padding: 15px;
     margin: 10px 0;
-    transition: 0.15s;
+    transition: 0.15s !important;
+    line-height: normal !important;
+    border-bottom: 5px solid rgba(0,0,0,0) !important;
 }
 
 .postbox:hover {
+    color: #fff !important;
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
     transform: scale(1.2);
-    background: rgba(40,40,40,0.8)
-}
-
-.postbox {
-    border-bottom: 5px solid rgba(0,0,0,0) !important;
-}
-.postbox:hover {
+    background: rgba(40,40,40,0.8);
     border-bottom: 5px solid var(--main-hover-color) !important;
-}
-
-.postbox:hover span {
-    color: #fff;
 }
